avoid double borders on scrolled window

--- a/gtk-3.0/widgets/scrollbar.css
+++ b/gtk-3.0/widgets/scrollbar.css
@@ -4,6 +4,7 @@
 
 scrolledwindow {
     border-width: 1px;
+    margin: -1px;
 }
 
 scrollbar {
